<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@color/light_gray"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center"
        android:layout_gravity="top">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/halo"
            android:textColor="@color/brown"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center_vertical" />

        <ImageView
            android:id="@+id/ivProfilePicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/banner_profile" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:gravity="center"
        android:layout_marginTop="120dp">

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_search"
            android:hint="@string/search"
            android:textColorHint="@color/light_gray"
            android:padding="15dp"
            android:drawablePadding="10dp"
            android:background="@drawable/bg_search_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/popular"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/brown" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCoffeeShop"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</FrameLayout>
