<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:background="@drawable/profile_background"
    android:gravity="center_horizontal"
    tools:context=".fragments.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="top">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edprofile"
            android:textColor="@color/brown"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center_vertical" />
    </LinearLayout>

    <!-- Profile Picture with Edit Icon -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/ic_photo"
            android:background="@drawable/profile_picture_border"
            android:scaleType="centerCrop"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/editIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/profilePicture"
            android:layout_alignEnd="@id/profilePicture"
            android:src="@drawable/ic_edit"
            android:background="@drawable/circle_background"
            android:padding="6dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/MyProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/prof"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/poppins"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Name -->
    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/name"
        android:layout_marginTop="10dp"
        android:layout_gravity="start"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/poppins"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/light_brown"
        android:text="Jelly Bean"
        android:layout_marginTop="4dp"
        android:layout_gravity="start"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/poppins"/>

    <!-- Bio -->
    <TextView
        android:id="@+id/Bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bio"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_gravity="start"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/poppins"/>

    <EditText
        android:id="@+id/userBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/light_brown"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:layout_gravity="start"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/poppins"
        android:minLines="1"
        android:inputType="textMultiLine"/>

    <!-- Number of Review -->
    <TextView
        android:id="@+id/Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_gravity="start"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/poppins"/>

    <TextView
        android:id="@+id/userNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12"
        android:textColor="@color/light_brown"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:layout_gravity="start"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/poppins"/>

    <!-- Edit Profile Button -->
    <Button
        android:id="@+id/saveBtn"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="@string/saveBtn"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/light_brown"
        android:textColor="@android:color/white"
        android:fontFamily="@font/poppins"/>

</LinearLayout>